Add profile image download

--- a/portal/apps/org.wso2.carbon.iam.user-portal.app/src/main/component.yaml
+++ b/portal/apps/org.wso2.carbon.iam.user-portal.app/src/main/component.yaml
@@ -2,7 +2,9 @@
 # example entry:
 #    - className: "org.wso2.carbon.uuf.sample.pets-store.PetsStoreMicroservice"
 #      uri: "/pets/"
-apis: []
+apis:
+  - className: "org.wso2.is.portal.user.client.api.ProfileImageDownloaderService"
+    uri: "/profile-image-service/"
 
 # Binding fragments into zones.
 # Modes:
