--- a/portal/apps/org.wso2.carbon.iam.user-portal.app/pom.xml
+++ b/portal/apps/org.wso2.carbon.iam.user-portal.app/pom.xml
@@ -78,7 +78,7 @@
                             <instructions>
                                 <!--<Import-Package>org.wso2.is.portal.user.client.realmservice</Import-Package>-->
                                 <!--<Import-Package>org.wso2.is.portal.user.client.profile</Import-Package>-->
-                                <Import-Package>org.wso2.is.portal.user.client.api.*</Import-Package>
+                                <Import-Package>org.wso2.is.portal.user.client.api</Import-Package>
                             </instructions>
                             <!--All backend dependencies should be specified here-->
                             <bundles>
