--- a/portal/osgi-services/org.wso2.is.portal.user.client.api/pom.xml
+++ b/portal/osgi-services/org.wso2.is.portal.user.client.api/pom.xml
@@ -81,7 +81,10 @@
             <groupId>org.wso2.carbon.identity.governance</groupId>
             <artifactId>org.wso2.carbon.identity.recovery</artifactId>
         </dependency>
-
+        <dependency>
+            <groupId>org.wso2.msf4j</groupId>
+            <artifactId>msf4j-core</artifactId>
+        </dependency>
         <!--<dependency>-->
         <!--<groupId>org.apache.felix</groupId>-->
         <!--<artifactId>org.apache.felix.scr.ds-annotations</artifactId>-->
@@ -99,7 +102,9 @@
             org.wso2.carbon.identity.meta.claim.mgt.exception.*;version="${org.wso2.carbon.identity.mgt.version.range}",
             org.wso2.carbon.identity.meta.claim.mgt.mapping.*;version="${org.wso2.carbon.identity.mgt.version.range}",
             org.wso2.carbon.uuf.spi.auth.*,
-            org.wso2.carbon.kernel.utils.*
+            org.wso2.carbon.kernel.utils.*,
+            org.wso2.msf4j;version="${msf4j.import.version.range}",
+            javax.ws.rs.*;version="${javax.ws.rs.import.version.range}",
         </import.package>
         <!--//todo set versions-->
         <export.package>
