--- a/pom.xml
+++ b/pom.xml
@@ -1691,6 +1691,8 @@
         <org.apache.commons.commons-lang3.version>3.1</org.apache.commons.commons-lang3.version>
         <org.objectweb.asm.version>5.1</org.objectweb.asm.version>
 
+        <javax.ws.rs.import.version.range>[2.0.0, 3.0.0)</javax.ws.rs.import.version.range>
+
     </properties>
 =======
     <build>
