--- a/tests/osgi-tests/src/test/resources/carbon-home/conf/identity/profile-mapping.yaml
+++ b/tests/osgi-tests/src/test/resources/carbon-home/conf/identity/profile-mapping.yaml
@@ -18,6 +18,7 @@
 profiles:
  -
   profileName: "default"
+  isAdminProfile: false
   claims:
   -
    claimURI: "http://wso2.org/claims/username"
@@ -27,37 +28,61 @@ profiles:
    verifier: "claim verifying extension"
    validator: "claim validating extension"
    transformer: "transform extension"
-   regex: "*"
+   regex: ".*"
    defaultValue: "user1"
    dataType: "text"
    properties:
     customproperty: "custom value"
   -
+   claimURI: "http://wso2.org/claims/givenname"
+   displayName: "First Name"
+   required: true
+   readonly: false
+   regex: ".*"
+  -
+   claimURI: "http://wso2.org/claims/lastname"
+   displayName: "Last Name"
+   required: false
+   readonly: false
+   regex: ".*"
+  -
    claimURI: "http://wso2.org/claims/email"
    displayName: "Email"
    required: true
-   readonly: true
-   regex: "*"
+   readonly: false
+   dataType: "email"
+   regex: ".*"
   -
-   claimURI: "http://wso2.org/claims/mobile"
-   displayName: "Mobile"
-   required: true
-   readonly: true
-   regex: "*"
-  -
-   claimURI: "http://wso2.org/claims/organization"
-   displayName: "Organization"
-   required: true
-   readonly: true
-   regex: "*"
+   claimURI: "http://wso2.org/claims/telephone"
+   displayName: "Telephone"
+   required: false
+   readonly: false
+   regex: ".*"
+   dataType: "text"
  -
   profileName: "employee"
+  isAdminProfile: false
   claims:
   -
-   claimURI: "http://wso2.org/claims/employeeNumber"
-   displayName: "Employee Number"
+   claimURI: "http://wso2.org/claims/username"
+   displayName: "User Name"
    required: true
    readonly: true
-   regex: "*"
+   regex: ".*"
+   defaultValue: "user1"
+   dataType: "text"
    properties:
     customproperty: "custom value"
+  -
+   claimURI: "http://wso2.org/claims/givenname"
+   displayName: "Employee Name"
+   required: true
+   readonly: false
+   regex: ".*"
+  -
+   claimURI: "http://wso2.org/claims/email"
+   displayName: "Email"
+   required: true
+   readonly: false
+   dataType: "email"
+   regex: ".*"
