--- a/tests/osgi-tests/pom.xml
+++ b/tests/osgi-tests/pom.xml
@@ -302,10 +302,6 @@
             <artifactId>javax.inject</artifactId>
         </dependency>
         <dependency>
-            <groupId>org.wso2.eclipse.osgi</groupId>
-            <artifactId>org.eclipse.osgi</artifactId>
-        </dependency>
-        <dependency>
             <groupId>org.wso2.orbit.org.yaml</groupId>
             <artifactId>snakeyaml</artifactId>
         </dependency>
@@ -382,7 +378,11 @@
             <!--<artifactId>org.wso2.carbon.identity.recovery</artifactId>-->
         <!--</dependency>-->
 
-
+        <dependency>
+            <groupId>org.jacoco</groupId>
+            <artifactId>org.jacoco.ant</artifactId>
+            <version>${org.jacoco.ant.version}</version>
+        </dependency>
     </dependencies>
 
     <profiles>
@@ -395,6 +395,26 @@
             </activation>
             <build>
                 <plugins>
+                    <plugin>
+                        <groupId>org.apache.maven.plugins</groupId>
+                        <artifactId>maven-dependency-plugin</artifactId>
+                        <executions>
+
+                            <execution>
+                                <id>copy-jacoco-dependencies</id>
+                                <phase>compile</phase>
+                                <goals>
+                                    <goal>copy-dependencies</goal>
+                                </goals>
+                                <configuration>
+                                    <outputDirectory>${project.build.directory}</outputDirectory>
+                                    <includeTypes>jar</includeTypes>
+                                    <includeArtifactIds>org.jacoco.ant</includeArtifactIds>
+                                    <stripVersion>true</stripVersion>
+                                </configuration>
+                            </execution>
+                        </executions>
+                    </plugin>
                     <plugin>
                         <groupId>org.apache.maven.plugins</groupId>
                         <artifactId>maven-compiler-plugin</artifactId>
@@ -416,7 +436,7 @@
                             <systemProperties>
                                 <property>
                                     <name>carbon.home</name>
-                                    <value>${project.basedir}/src/test/resources/carbon-home</value>
+                                    <value>${project.build.directory}/test-classes/carbon-home</value>
                                 </property>
                             </systemProperties>
                             <suiteXmlFiles>
@@ -425,37 +445,37 @@
                         </configuration>
                     </plugin>
 
-                    <!--<plugin>-->
-                        <!--<groupId>org.jacoco</groupId>-->
-                        <!--<artifactId>jacoco-maven-plugin</artifactId>-->
-                        <!--<version>${jacoco.version}</version>-->
-                        <!--<executions>-->
-                            <!--<execution>-->
-                                <!--<id>default-prepare-agent</id>-->
-                                <!--<goals>-->
-                                    <!--<goal>prepare-agent</goal>-->
-                                <!--</goals>-->
-                                <!--<configuration>-->
-                                    <!--<includes>-->
-                                        <!--<include>org.wso2.carbon*</include>-->
-                                    <!--</includes>-->
-                                <!--</configuration>-->
-                            <!--</execution>-->
-                            <!--<execution>-->
-                                <!--<id>default-check</id>-->
-                                <!--<goals>-->
-                                    <!--<goal>check</goal>-->
-                                <!--</goals>-->
-                                <!--<configuration>-->
-                                    <!--<rules>-->
-                                        <!--<rule>-->
-                                        <!--</rule>-->
-                                    <!--</rules>-->
-                                <!--</configuration>-->
-                            <!--</execution>-->
-                        <!--</executions>-->
-                    <!--</plugin>-->
-                   <!-- <plugin>
+                    <plugin>
+                        <groupId>org.jacoco</groupId>
+                        <artifactId>jacoco-maven-plugin</artifactId>
+                        <executions>
+                            <execution>
+                                <id>prepare-agent</id>
+                                <goals>
+                                    <goal>prepare-agent</goal>
+                                </goals>
+                                <configuration>
+                                    <includes>
+                                        <include>org.wso2.carbon*</include>
+                                    </includes>
+                                </configuration>
+                            </execution>
+                            <execution>
+                                <id>default-check</id>
+                                <goals>
+                                    <goal>check</goal>
+                                </goals>
+                                <configuration>
+                                    <rules>
+                                        <rule>
+                                        </rule>
+                                    </rules>
+                                </configuration>
+                            </execution>
+                        </executions>
+                    </plugin>
+
+                    <plugin>
                         <groupId>org.apache.maven.plugins</groupId>
                         <artifactId>maven-antrun-plugin</artifactId>
                         <executions>
@@ -471,13 +491,13 @@
                                             <executiondata>
                                                 <file file="${project.build.directory}/jacoco.exec"/>
                                             </executiondata>
-                                            <structure name="Carbon Security OSGi Tests">
+                                            <structure name="Identity Server Tests">
                                                 <classfiles>
                                                     <fileset
-                                                            dir="org.wso2.is.portal.user.client.api/target/classes"/>
+                                                            dir="../../portal/osgi-services/org.wso2.is.portal.user.client.api/target/classes"/>
                                                 </classfiles>
                                                 <sourcefiles encoding="UTF-8">
-                                                    <fileset dir="org.wso2.is.portal.user.client.api/src"/>
+                                                    <fileset dir="../../portal/osgi-services/org.wso2.is.portal.user.client.api/src"/>
                                                 </sourcefiles>
                                             </structure>
                                             <html destdir="${project.build.directory}/site/jacoco"/>
@@ -496,7 +516,7 @@
                                 <version>${org.jacoco.ant.version}</version>
                             </dependency>
                         </dependencies>
-                    </plugin>-->
+                    </plugin>
                     <plugin>
                         <groupId>org.ops4j.pax.exam</groupId>
                         <artifactId>maven-paxexam-plugin</artifactId>
@@ -507,44 +527,6 @@
                                 <goals>
                                     <goal>generate-depends-file</goal>
                                 </goals>
-                            </execution>
-                        </executions>
-                    </plugin>
-                    <plugin>
-                        <groupId>org.codehaus.mojo</groupId>
-                        <artifactId>sql-maven-plugin</artifactId>
-                        <dependencies>
-                            <dependency>
-                                <groupId>com.h2database</groupId>
-                                <artifactId>h2</artifactId>
-                                <version>1.4.191</version>
-                            </dependency>
-                        </dependencies>
-                        <configuration>
-                            <url>
-                                jdbc:h2:file:${basedir}/target/database/WSO2CARBON_DB;DB_CLOSE_ON_EXIT=FALSE;LOCK_TIMEOUT=60000;MV_STORE=FALSE
-                            </url>
-                            <username>wso2carbon</username>
-                            <password>wso2carbon</password>
-                            <driver>org.h2.Driver</driver>
-                        </configuration>
-                        <executions>
-                            <!--Create the database-->
-                            <execution>
-                                <id>create-database</id>
-                                <phase>generate-resources</phase>
-                                <goals>
-                                    <goal>execute</goal>
-                                </goals>
-                                <configuration>
-                                    <autocommit>true</autocommit>
-                                    <srcFiles>
-                                        <srcFile>
-                                            src/test/resources/dbscripts/identity-mgt/h2.sql
-                                        </srcFile>
-                                    </srcFiles>
-                                    <onError>abort</onError>
-                                </configuration>
                             </execution>
                         </executions>
                     </plugin>
